[gd_scene load_steps=12 format=3 uid="uid://dlaluv2l8rc8g"]

[ext_resource type="Script" path="res://Scripts/SceneSwitcher.gd" id="1_rnikt"]
[ext_resource type="Script" path="res://Scenes/Kitchen/kitchen.gd" id="2_ia7kr"]
[ext_resource type="PackedScene" uid="uid://dx7hyy2njvk1r" path="res://Scenes/player/player.tscn" id="3_e4bo7"]
[ext_resource type="Script" path="res://Scripts/Cameras/Cameras.gd" id="4_q73wt"]
[ext_resource type="PackedScene" uid="uid://bq8p3wawxv3e2" path="res://Scenes/Gadgets/Counter/counter.tscn" id="5_m16i2"]
[ext_resource type="PackedScene" uid="uid://cno5j3na4u7m7" path="res://Scenes/Gadgets/DrinkMachine/drinking_m.tscn" id="6_q4ljl"]
[ext_resource type="PackedScene" uid="uid://bhkwyq5uphbg8" path="res://Scenes/Gadgets/GrillAndStove/grill_and_stove.tscn" id="7_7p6il"]
[ext_resource type="PackedScene" uid="uid://bpd74p6321kb5" path="res://Scenes/Gadgets/CuttingTable/cutting_table.tscn" id="8_0mj1i"]
[ext_resource type="PackedScene" uid="uid://bjmaehoa5c46j" path="res://Scenes/Gadgets/Pantry/pantry.tscn" id="9_p85xq"]
[ext_resource type="PackedScene" uid="uid://cfc2ysplltcwb" path="res://Scenes/Gadgets/Oven/oven.tscn" id="10_r76ax"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a243u"]
size = Vector2(1164, 64)

[node name="Kitchen" type="Node2D"]
script = ExtResource("2_ia7kr")
metadata/_edit_vertical_guides_ = [768.0]

[node name="player" parent="." instance=ExtResource("3_e4bo7")]
top_level = true
position = Vector2(1000, 574)
metadata/_edit_lock_ = true

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2(0, 640)
scale = Vector2(2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground"]
position = Vector2(575.5, 30.9999)
rotation = 0.000118921
shape = SubResource("RectangleShape2D_a243u")

[node name="Cameras" type="Node2D" parent="."]
position = Vector2(576, 320)

[node name="KitchenCamera" type="Camera2D" parent="Cameras" node_paths=PackedStringArray("nextCamera")]
script = ExtResource("4_q73wt")
nextCamera = NodePath("../FreezerCamera")

[node name="FreezerCamera" type="Camera2D" parent="Cameras" node_paths=PackedStringArray("nextCamera")]
position = Vector2(1152, 0)
script = ExtResource("4_q73wt")
nextCamera = NodePath("../KitchenCamera")

[node name="Gadgets" type="Node2D" parent="."]

[node name="Counter" parent="Gadgets" instance=ExtResource("5_m16i2")]
position = Vector2(128, 512)
collision_layer = 2
collision_mask = 3

[node name="DrinkingM" parent="Gadgets" instance=ExtResource("6_q4ljl")]
position = Vector2(448, 512)

[node name="GrillAndStove" parent="Gadgets" instance=ExtResource("7_7p6il")]
position = Vector2(896, 576)

[node name="CuttingTable" parent="Gadgets" instance=ExtResource("8_0mj1i")]
position = Vector2(704, 576)

[node name="Pantry" parent="Gadgets" instance=ExtResource("9_p85xq")]
position = Vector2(1408, 512)

[node name="Oven" parent="Gadgets" instance=ExtResource("10_r76ax")]
position = Vector2(2112, 448)

[node name="SceneSwitcher" type="Node" parent="."]
script = ExtResource("1_rnikt")

[connection signal="changeCamera" from="player" to="." method="_on_player_change_camera"]
[connection signal="onPantryOpened" from="Gadgets/Pantry" to="." method="_on_pantry_opened"]
